--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 dat/2/*
-out/cctyper/*
+out/cctyper/asgard/*
+
+out/cctyper/tack/*
+
+out/cctyper/eury/*
+
+out/cctyper/dpann/*
 *.log
+cctyper_db/
